--- a/jibri.conf
+++ b/jibri.conf
@@ -28,7 +28,7 @@ xmpp-domain = "rapat.space"
             }
 
             control-login {
-                domain = "auth.your.rapat.space"
+                domain = "auth.rapat.space"
                 username = "jibri"
                 password = "jibripass"
             }
