--- a/jicofo.conf
+++ b/jicofo.conf
@@ -4,6 +4,7 @@ jicofo {
   xmpp: {
     client: {
       client-proxy: focus.rapat.space
+      disable-certificate-verification: true
     }
     trusted-domains: [ "recorder.rapat.space" ]
   }
